--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,22 @@
 <h1>Update Pet</h1>
 
+<h2>Edits for <%= @pet.name %></h2>
 
+<form action="/pets/<%= @pet.id %>" method="POST">
+    <input id="hidden" type="hidden" name="_method" value="patch">
+    <label>Edit the Pet's Name:</label>
+
+    <input type="text" id='pet_name' name="pet[name]" value="<%= @pet.name %>">
+
+    <h3>Existing Owners</h3>
+    <% @owners.each do |owner| %>
+        <input type="radio" name="pet[owner_id]" id="<%= owner.id %>" value="<%= owner.id %>" <%='checked' if @pet.owner == owner %>><%= owner.name %></input><br>
+    <% end %>
+
+
+    <h3>New Owner</h3>
+    <label>Owner Name: </label>
+    <input type="text" name="owner[name]" id="owner_name">
+    <br>
+    <input type="submit" value="Update Pet">
+</form>
